--- a/moovsmart/src/app/components/property-list/property-list.component.html
+++ b/moovsmart/src/app/components/property-list/property-list.component.html
@@ -9,27 +9,27 @@
                 <tr>
                     <td>
                         <label class="form-control-label" for="sizeMin">Méret min:</label>
-                        <input type="number" formControlName="minSize" class="form-control" id="sizeMin"
+                        <input type="text" formControlName="minSize" class="form-control" id="sizeMin"
                                placeholder="0">
                         <small class="text-danger" *ngIf="filteredForm.get('minSize').errors">Méret minimum 0 kell
                             lenni</small>
                     </td>
                     <td>
                         <label class="form-control-label" for="sizeMax">Méret max:</label>
-                        <input type="number" formControlName="maxSize" class="form-control" id="sizeMax"
+                        <input type="text" formControlName="maxSize" class="form-control" id="sizeMax"
                                placeholder="mindegy">
                         <small class="text-danger" *ngIf="filteredForm.get('maxSize').errors">Egész számot lehet
                             megadni</small>
                     </td>
                     <td>
                         <label class="form-control-label" for="priceMin">Ár min:</label>
-                        <input type="number" formControlName="minPrice" class="form-control" id="priceMin"
+                        <input type="text" formControlName="minPrice" class="form-control" id="priceMin"
                                placeholder="0">
                         <small class="text-danger" *ngIf="filteredForm.get('minPrice').errors">Minimum ár 0 ft</small>
                     </td>
                     <td>
                         <label class="form-control-label" for="priceMax">Ár max:</label>
-                        <input type="number" formControlName="maxPrice" class="form-control" id="priceMax"
+                        <input type="text" formControlName="maxPrice" class="form-control" id="priceMax"
                                placeholder="mindegy">
                         <small class="text-danger" *ngIf="filteredForm.get('maxPrice').errors">Egész számot kell
                             megadni</small>
@@ -66,7 +66,7 @@
                     </td>
                     <td>
                         <label class="form-control-label" for="rooms">Szobák száma</label>
-                        <input type="number" formControlName="numberOfRooms" class="form-control" id="rooms"
+                        <input type="text" formControlName="numberOfRooms" class="form-control" id="rooms"
                                placeholder="mindegy">
                         <small class="text-danger" *ngIf="filteredForm.get('numberOfRooms').errors">Csak egész számot
                             lehet megadni</small>
