--- a/moovsmart/src/app/components/admin/admin.component.css
+++ b/moovsmart/src/app/components/admin/admin.component.css
@@ -172,3 +172,15 @@
     margin-bottom: 5%;
 }
 
+.accept-button {
+    background-color: #AFD275;
+    color: white;
+    display: inline-block;
+}
+
+.reject-button {
+    background-color: #E7717D;
+    color: white;
+    display: inline-block;
+}
+
