--- a/moovsmart/src/app/components/profil-list/profil-list.component.html
+++ b/moovsmart/src/app/components/profil-list/profil-list.component.html
@@ -4,60 +4,65 @@
         <hr>
     </div>
     <div>
-        <button class="btn btn-light" id="button-accepted-button">Hirdetéseim</button>
-        <button class="btn btn-light" id="button-holding-list" (click)="getHoldingList()">Elfogadásra vár</button>
-        <button class="btn btn-info" id="button-new-adding" routerLink="/property-form">Új hirdetés</button>
-        <div *ngFor="let property of actualPageList[actualPageNumber-1]" id="mainBoard-div">
-            <!--div id="status-div">
-               <strong>
-                   <span>Statusz: </span><span class="status-message-accepted">{{property.status}}</span>
-               </strong>
-            </div-->
+        <div class="d-flex justify-content">
+            <button class="btn btn-secondary" [class.button-touched]="!queryStatus"
+                    (click)="refreshPropertyList()">Hirdetéseim
+            </button>
+            <button class="btn btn-secondary" [class.button-touched]="queryStatus"
+                    (click)="getHoldingList()">Elfogadásra vár
+            </button>
+            <button class="btn btn-light" id="button-new-adding" routerLink="/property-form">Új hirdetés</button>
+        </div>
 
-
-            <div class="mainRow">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-sm-3" id="img-holder-row">
-                            <div *ngIf="property?.imageUrl[0]?.length < 3">
-                                <img [src]="defaultPicture" class="defaultPicture" [alt]="defaultPicture">
-                            </div>
-                            <div *ngIf="property?.imageUrl[0]?.length >= 3">
-                                <img (click)="details(property.id)" alt="ingatlan" width="200"
-                                     src="{{property?.imageUrl[0]}}"/>
-                            </div>
-                        </div>
-                        <div class="col-sm-9">
-                            <div class="row">
-                                <div class="col-sm">
-                                    <h5>{{property.name}}</h5>
-                                    <div id="area-div"><strong>Terület</strong>: {{property.area}} m<sup>2</sup></div>
-                                    <div id="price-div"><strong>Ár</strong>: {{property.price}} M ft</div>
+        <div id="list-holder-div">
+            <div *ngFor="let property of actualPageList[actualPageNumber-1]" id="mainBoard-div">
+                <div class="mainRow">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-sm-3" id="img-holder-row">
+                                <div *ngIf="property?.imageUrl[0]?.length < 3">
+                                    <img [src]="defaultPicture" class="defaultPicture" [alt]="defaultPicture">
                                 </div>
-                                <div class="col-sm">
-                                    <div>
-                                        <strong>Szobák száma</strong>: {{property.numberOfRooms}}
-                                    </div>
+                                <div *ngIf="property?.imageUrl[0]?.length >= 3">
+                                    <img (click)="details(property.id)" alt="ingatlan" width="200"
+                                         src="{{property?.imageUrl[0]}}"/>
                                 </div>
-                                <div class="col-sm">
-                                    <div class="status-div">
-                                        <strong>
-                                            <span>Hirdetés statusz: </span><span class="status-message-accepted">{{property.status}}</span>
-                                        </strong>
+                            </div>
+                            <div class="col-sm-9">
+                                <div class="row">
+                                    <div class="col-sm">
+                                        <h5>{{property.name}}</h5>
+                                        <div id="area-div"><strong>Terület</strong>: {{property.area}} m<sup>2</sup>
+                                        </div>
+                                        <div id="price-div"><strong>Ár</strong>: {{property.price}} M ft</div>
                                     </div>
-                                    <div id="detail-button-div" class="d-flex justify-content-center">
+                                    <div class="col-sm">
                                         <div>
-                                            <button id="detail-button" class="btn" (click)="details(property.id)">
-                                                Részletek
-                                            </button>
-                                        </div>
-                                        <div id="edit-icon">
-                                            <a *ngIf="storage?.userId == property.userId" (click)="details(property.id)"
-                                               title="Szerkesztés"> <i class="fas fa-wrench"></i></a>
+                                            <strong>Szobák száma</strong>: {{property.numberOfRooms}}
                                         </div>
                                     </div>
-                                    <div id="date-div">
-                                        <strong>Regisztráció: </strong>{{property.time}}
+                                    <div class="col-sm">
+                                        <div class="status-div" *ngIf="queryStatus">
+                                            <strong>
+                                                <span>Státusz: </span><span
+                                                class="status-message-accepted">{{property.status}}</span>
+                                            </strong>
+                                        </div>
+                                        <div id="detail-button-div" class="d-flex justify-content-center">
+                                            <div>
+                                                <button id="detail-button" class="btn" (click)="details(property.id)">
+                                                    Részletek
+                                                </button>
+                                            </div>
+                                            <div id="edit-icon">
+                                                <a *ngIf="storage?.userId == property.userId"
+                                                   (click)="details(property.id)"
+                                                   title="Szerkesztés"> <i class="fas fa-wrench"></i></a>
+                                            </div>
+                                        </div>
+                                        <div id="date-div">
+                                            <strong>Regisztráció: </strong>{{property.time}}
+                                        </div>
                                     </div>
                                 </div>
                             </div>
