--- a/moovsmart/src/app/components/admin/admin.component.html
+++ b/moovsmart/src/app/components/admin/admin.component.html
@@ -48,6 +48,9 @@
             </form>
         </div>
         <div>
+            {{userForHandling?.userName}}
+        </div>
+        <div>
             <div *ngIf="propertyListItemModels !== undefined && propertyListItemModels.length > 0">
 
                 <!-- Property list -->
