--- a/moovsmart/src/app/components/admin/admin.component.html
+++ b/moovsmart/src/app/components/admin/admin.component.html
@@ -51,10 +51,14 @@
             <div>Név:</div>
             {{userForHandling?.userName}}
             <hr>
+            <div>Státusz:</div>
+            <div *ngIf="userForHandling?.active">Aktív</div>
+            <div *ngIf="userForHandling?.active === false">Inaktív</div>
+
             <div [ngStyle]="{'display':display}">
                 <button class="btn">Felhasználó ingatlanjainak listázása</button>
-                <button *ngIf="userForHandling.isActive" class="btn">Felhasználó tiltása</button>
-                <button *ngIf="!userForHandling.isActive" class="btn">Tiltás feloldása</button>
+                <button *ngIf="userForHandling?.active === true" class="btn" (click)="askForBanUser(userForHandling?.id)">Felhasználó tiltása</button>
+                <button *ngIf="userForHandling?.active === false" class="btn" (click)="unBanUser(userForHandling?.id)">Tiltás feloldása</button>
             </div>
         </div>
         <div>
@@ -117,6 +121,30 @@
                         <i class="fas fa-angle-right"></i>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal -->
+
+<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayBan}">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Felhasználó tiltása</h5>
+                <button type="button" class="close" data-dismiss="modal" (click)="closeDial()" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p id="error-message">Biztos benne, hogy tiltja a felhasználót?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn confirmationButton" data-dismiss="modal"
+                        (click)="banUser(userIdForBan)">Igen
+                </button>
+                <button type="button" class="btn cancelButton" data-dismiss="modal" (click)="closeDial()">Nem</button>
             </div>
         </div>
     </div>
