database saving works

--- a/moovsmart/src/app/components/navbar/navbar.component.css
+++ b/moovsmart/src/app/components/navbar/navbar.component.css
@@ -5,6 +5,14 @@
     color: white;
 }
 
+#top-div{
+    background-color: darkslategray;
+    color: #ECF0F3;
+    min-height: 30px;
+    width: auto;
+}
+
+
 
 
 
