--- a/moovsmart/src/app/components/navbar/navbar.component.html
+++ b/moovsmart/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,7 @@
+<!--div id="top-div">próba</div-->
+<div>
 <nav class="navbar navbar-dark navbar-expand-lg fixed-top mynav">
+
   <div class="container">
     <a class="navbar-brand" routerLink="/"><i class="fas fa-home"></i>Moovsmart</a>
     <button aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation"
@@ -21,3 +24,4 @@
     </div>
   </div>
 </nav>
+</div>
