--- a/moovsmart/src/app/app.component.html
+++ b/moovsmart/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="content">
+  <!-- div id="top-div"></div-->
   <app-navbar></app-navbar>
   <router-outlet></router-outlet>
+  <app-footer></app-footer>
 </div>
 
