implement archive and de-archive properties

--- a/moovsmart/src/app/components/admin/admin.component.html
+++ b/moovsmart/src/app/components/admin/admin.component.html
@@ -22,22 +22,7 @@
                 </div>
             </div>
         </div>
-        <div *ngIf="buttonPushed === 3" id="header-div-3">
-            <hr>
-            <h3>Archivált ingatlanok</h3>
-            <hr>
-            <form (ngSubmit)="submit()" [formGroup]="dateForm">
-                <input class="dateInput" type="datetime-local" formControlName="dateFrom">
-                <input class="dateInput" type="datetime-local" formControlName="dateTo">
-                <button type="submit" class="btn submit-button">Lekérdezés</button>
-            </form>
-            <div id="emptyArchiveMessage">
-                <div *ngIf="propertyListItemModels === undefined || propertyListItemModels.length === 0"
-                     id="emptyArchive">
-                    <div id="noArchives">Jelenleg nincs archivált ingatlan.</div>
-                </div>
-            </div>
-        </div>
+
         <div *ngIf="buttonPushed === 2" id="header-div-2">
             <hr>
             <h3>Kérem, írja be a felhasználó email címét!</h3>
@@ -61,7 +46,26 @@
                 <button *ngIf="userForHandling?.active === false" class="btn" (click)="unBanUser(userForHandling?.id)">Tiltás feloldása</button>
             </div>
         </div>
-        <div>
+
+        <div *ngIf="buttonPushed === 3" id="header-div-3">
+            <hr>
+            <h3>Archivált ingatlanok</h3>
+            <hr>
+            <form (ngSubmit)="submit()" [formGroup]="dateForm">
+                <input class="dateInput" type="datetime-local" formControlName="dateFrom">
+                <input class="dateInput" type="datetime-local" formControlName="dateTo">
+
+                <button type="submit" class="btn submit-button">Lekérdezés</button>
+            </form>
+            <div id="emptyArchiveMessage">
+                <div *ngIf="propertyListItemModels === undefined || propertyListItemModels.length === 0"
+                     id="emptyArchive">
+                    <div id="noArchives">Jelenleg nincs archivált ingatlan.</div>
+                </div>
+            </div>
+        </div>
+
+        <div *ngIf="buttonPushed > 0">
             <div *ngIf="propertyListItemModels !== undefined && propertyListItemModels.length > 0">
 
                 <!-- Property list -->
@@ -93,9 +97,14 @@
                                     </div>
                                     <div class="col-sm">
                                         <div id="detail-button-div" class="d-flex justify-content-center">
-                                            <div>
+                                            <div *ngIf="buttonPushed === 1">
                                                 <button id="detail-button" class="btn" (click)="details(property.id)">
                                                     Részletek
+                                                </button>
+                                            </div>
+                                            <div *ngIf="buttonPushed === 3">
+                                                <button id="reAccepted-button" class="btn" (click)="reactivateProperty(property.id)">
+                                                    Visszahelyezés
                                                 </button>
                                             </div>
                                         </div>
